<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_mux</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ashaywakode@gmail.com">ashay</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies required to build custom actions -->
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <depend>custom_action</depend>

  <!-- Runtime dependencies for Python and actions -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- For Python entry point -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>setuptools</exec_depend>

  <!-- Export info for build system -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
